Remove xcconfig and update Bundle identifier.

--- a/HotKeyToolKit/Info.plist
+++ b/HotKeyToolKit/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>HotKeyToolKit</string>
 	<key>CFBundleIdentifier</key>
-	<string>fr.shadowlab.HotKeyToolKit</string>
+	<string>org.shadowlab.HotKeyToolKit</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
@@ -17,6 +17,6 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2.0</string>
+	<string>2.0.1</string>
 </dict>
 </plist>
