Same as previous in Daemon

--- a/SparkDaemon/Spark Daemon.plist
+++ b/SparkDaemon/Spark Daemon.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string>Spark</string>
 	<key>CFBundleIdentifier</key>
-	<string>fr.shadowlab.SparkDaemon</string>
+	<string>org.shadowlab.SparkDaemon</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
