--- a/SparkPlugins/Documents/Info.plist
+++ b/SparkPlugins/Documents/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>fr.shadowlab.DocumentAction</string>
+	<string>org.shadowlab.spark.document</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
