--- a/SparkPlugins/iTunes/Info.plist
+++ b/SparkPlugins/iTunes/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>iTunesAction</string>
 	<key>CFBundleIdentifier</key>
-	<string>fr.shadowlab.iTunesAction</string>
+	<string>org.shadowlab.spark.iTunes</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
