Update for XCode 2.2, change Bundle ID and improve UI

--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -66,7 +66,7 @@
 	<key>CFBundleIconFile</key>
 	<string>Spark</string>
 	<key>CFBundleIdentifier</key>
-	<string>fr.shadowlab.Spark</string>
+	<string>org.shadowlab.Spark</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
