--- a/Plugins Factory/KeyStroke/Info.plist
+++ b/Plugins Factory/KeyStroke/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>KeyStrokeAction</string>
 	<key>CFBundleIdentifier</key>
-	<string>fr.shadowlab.KeyStrokeAction</string>
+	<string>org.shadowlab.spark.keystroke</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
