Update plugin version + release notes

--- a/SparkPlugins/Application/Info.plist
+++ b/SparkPlugins/Application/Info.plist
@@ -15,9 +15,9 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleSignature</key>
-	<string>????</string>
+	<string>Sprk</string>
 	<key>CFBundleVersion</key>
-	<string>2.0</string>
+	<string>2.1</string>
 	<key>NSMainNibFile</key>
 	<string>AppConfigView</string>
 	<key>NSPrincipalClass</key>
