Add help Key support + correct recursive key + correct action Tiger dependency.

--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -74,7 +74,7 @@
 	<key>CFBundleSignature</key>
 	<string>Sprk</string>
 	<key>CFBundleVersion</key>
-	<string>2.1</string>
+	<string>2.1.1</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.3</string>
 	<key>NSAppleScriptEnabled</key>
@@ -82,6 +82,6 @@
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
-	<string>NSApplication</string>
+	<string>SparkEditor</string>
 </dict>
 </plist>
