Minors Correction to conform to new ShadowKit

--- a/Plugins Factory/Grayscale/Info.plist
+++ b/Plugins Factory/Grayscale/Info.plist
@@ -5,11 +5,11 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>GrayscaleAction</string>
+	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string>GrayscaleAction</string>
 	<key>CFBundleIdentifier</key>
-	<string>fr.shadowlab.GrayscaleAction</string>
+	<string>org.shadowlab.spark.grayscale</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
