--- a/Plugins Factory/KeyStroke/Info.plist
+++ b/Plugins Factory/KeyStroke/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>KeyStrokeAction</string>
+	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string>KeyStrokeAction</string>
 	<key>CFBundleIdentifier</key>
