--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -62,7 +62,7 @@
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
-	<string>Spark</string>
+	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string>Spark</string>
 	<key>CFBundleIdentifier</key>
