--- a/Plugins Factory/ShellScript/Info.plist
+++ b/Plugins Factory/ShellScript/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>ShellHotKey</string>
 	<key>CFBundleIdentifier</key>
-	<string>fr.shadowlab.shellHotKey</string>
+	<string>org.shadowlab.spark.shell</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
