--- a/HotKeyToolKit/Test-Info.plist
+++ b/HotKeyToolKit/Test-Info.plist
@@ -7,14 +7,14 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.shadowlab.spark.ShadowKit</string>
+	<string>com.yourcompany.Test</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
-	<string>FMWK</string>
+	<string>BNDL</string>
 	<key>CFBundleSignature</key>
-	<string>Shad</string>
+	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2.2</string>
+	<string>1.0</string>
 </dict>
 </plist>
