--- a/HotKeyToolKit/UITester-Info.plist
+++ b/HotKeyToolKit/UITester-Info.plist
@@ -7,14 +7,18 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.shadowlab.spark.ShadowKit</string>
+	<string>com.yourcompany.UITester</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
-	<string>FMWK</string>
+	<string>APPL</string>
 	<key>CFBundleSignature</key>
-	<string>Shad</string>
+	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2.2</string>
+	<string>1.0</string>
+	<key>NSMainNibFile</key>
+	<string>UITester</string>
+	<key>NSPrincipalClass</key>
+	<string>NSApplication</string>
 </dict>
 </plist>
