--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -79,6 +79,8 @@
 	<string>10.3</string>
 	<key>NSAppleScriptEnabled</key>
 	<string>YES</string>
+    <key>OSAScriptingDefinition</key>
+    <string>SparkSuite.sdef</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
