--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -74,16 +74,16 @@
 	<key>CFBundleSignature</key>
 	<string>Sprk</string>
 	<key>CFBundleVersion</key>
-	<string>2.2.0</string>
+	<string>3.0d1</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.3</string>
 	<key>NSAppleScriptEnabled</key>
 	<string>YES</string>
-    <key>OSAScriptingDefinition</key>
-    <string>SparkSuite.sdef</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>SparkEditor</string>
+	<key>OSAScriptingDefinition</key>
+	<string>SparkSuite.sdef</string>
 </dict>
 </plist>
