--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -12,7 +12,7 @@
 				<string>splist</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
-			<string>ListFile</string>
+			<string>Splist</string>
 			<key>CFBundleTypeName</key>
 			<string>SparkListFile</string>
 			<key>CFBundleTypeOSTypes</key>
@@ -21,6 +21,10 @@
 			</array>
 			<key>CFBundleTypeRole</key>
 			<string>Viewer</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>org.shadowlab.spark.list</string>
+			</array>
 			<key>LSTypeIsPackage</key>
 			<false/>
 		</dict>
@@ -30,7 +34,7 @@
 				<string>splib</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
-			<string>LibraryFile</string>
+			<string>Splib</string>
 			<key>CFBundleTypeName</key>
 			<string>SparkLibraryFile</string>
 			<key>CFBundleTypeOSTypes</key>
@@ -39,6 +43,10 @@
 			</array>
 			<key>CFBundleTypeRole</key>
 			<string>Viewer</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>org.shadowlab.spark.library</string>
+			</array>
 			<key>LSTypeIsPackage</key>
 			<true/>
 		</dict>
@@ -48,7 +56,7 @@
 				<string>spact</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
-			<string>Plugin</string>
+			<string>Spact</string>
 			<key>CFBundleTypeName</key>
 			<string>SparkActionPlugin</string>
 			<key>CFBundleTypeOSTypes</key>
@@ -57,6 +65,10 @@
 			</array>
 			<key>CFBundleTypeRole</key>
 			<string>None</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>org.shadowlab.spark.action</string>
+			</array>
 			<key>LSTypeIsPackage</key>
 			<true/>
 		</dict>
@@ -71,6 +83,8 @@
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>3.0</string>
 	<key>CFBundleSignature</key>
 	<string>Sprk</string>
 	<key>CFBundleVersion</key>
@@ -85,5 +99,65 @@
 	<string>SparkEditor</string>
 	<key>OSAScriptingDefinition</key>
 	<string>SparkSuite.sdef</string>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>com.apple.package</string>
+				<string>com.apple.bundle</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>SparkLibrary</string>
+			<key>UTTypeIconFile</key>
+			<string>Splib</string>
+			<key>UTTypeIdentifier</key>
+			<string>org.shadowlab.spark.library</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<string>splib</string>
+			</dict>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>com.apple.package</string>
+				<string>com.apple.bundle</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>SparkAction</string>
+			<key>UTTypeIconFile</key>
+			<string>Spact</string>
+			<key>UTTypeIdentifier</key>
+			<string>org.shadowlab.spark.action</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<string>spact</string>
+			</dict>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.xml</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>SparkList</string>
+			<key>UTTypeIconFile</key>
+			<string>Splist</string>
+			<key>UTTypeIdentifier</key>
+			<string>org.shadowlab.spark.list</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>com.apple.ostype</key>
+				<string>SpLi</string>
+				<key>public.filename-extension</key>
+				<string>splist</string>
+				<key>public.mime-type</key>
+				<string>text/xml</string>
+			</dict>
+		</dict>
+	</array>
 </dict>
 </plist>
