--- a/SparkPlugins/iTunes/Info.plist
+++ b/SparkPlugins/iTunes/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleVersion</key>
 	<string>2.1</string>
 	<key>NSMainNibFile</key>
-	<string>iTunesConfigView</string>
+	<string>iTunesView</string>
 	<key>NSPrincipalClass</key>
 	<string>ITunesActionPlugin</string>
 	<key>SparkActionClass</key>
