Refactor plugin and SDK, Implement Editor

--- a/SDK/MySparkAction/Info.plist
+++ b/SDK/MySparkAction/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>MyAction</string>
+	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIconFile</key>
 	<string>MyAction</string>
 	<key>CFBundleIdentifier</key>
@@ -19,7 +19,7 @@
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>NSMainNibFile</key>
-	<string>MyConfigView</string>
+	<string>MyActionPlugin</string>
 	<key>NSPrincipalClass</key>
 	<string>MyActionPlugin</string>
 	<key>SparkActionClass</key>
