--- a/SparkPlugins/System/Info.plist
+++ b/SparkPlugins/System/Info.plist
@@ -17,9 +17,9 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2.1</string>
+	<string>3.0</string>
 	<key>NSMainNibFile</key>
-	<string>SystemConfigView</string>
+	<string>SystemPlugin</string>
 	<key>NSPrincipalClass</key>
 	<string>SystemActionPlugin</string>
 	<key>SparkActionClass</key>
