--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -88,7 +88,7 @@
 	<key>CFBundleSignature</key>
 	<string>Sprk</string>
 	<key>CFBundleVersion</key>
-	<string>3.0d1</string>
+	<string>3.0b1</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.3</string>
 	<key>NSAppleScriptEnabled</key>
