Correct iTunes Bugs and reimplements Applications

--- a/SparkPlugins/Application/Info.plist
+++ b/SparkPlugins/Application/Info.plist
@@ -21,7 +21,7 @@
 	<key>NSMainNibFile</key>
 	<string>ApplicationPlugin</string>
 	<key>NSPrincipalClass</key>
-	<string>ApplicationActionPlugin</string>
+	<string>ApplicationPlugin</string>
 	<key>SparkActionClass</key>
 	<string>ApplicationAction</string>
 	<key>SparkPluginIcon</key>
