Start rewriting Document plugin.

--- a/SparkPlugins/Apple Script/Info.plist
+++ b/SparkPlugins/Apple Script/Info.plist
@@ -5,7 +5,9 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>AppleScriptAction</string>
+	<string>${EXECUTABLE_NAME}</string>
+    <key>CFBundleName</key>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
