--- a/SparkPlugins/Documents/Info.plist
+++ b/SparkPlugins/Documents/Info.plist
@@ -5,21 +5,23 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>DocumentAction</string>
+	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
 	<string>org.shadowlab.spark.document</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2.0</string>
+	<string>3.0</string>
 	<key>NSMainNibFile</key>
-	<string>DocConfigView</string>
+	<string>DocumentPlugin</string>
 	<key>NSPrincipalClass</key>
 	<string>DocumentActionPlugin</string>
 	<key>SparkActionClass</key>
