--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -81,14 +81,14 @@
 	<string>org.shadowlab.Spark</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>3.0</string>
 	<key>CFBundleSignature</key>
 	<string>Sprk</string>
 	<key>CFBundleVersion</key>
-	<string>3.0b1</string>
+	<string>${CURRENT_PROJECT_VERSION}</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.3</string>
 	<key>NSAppleScriptEnabled</key>
