Update Copyright and set svn-eol

--- a/HotKeyToolKit/Info.plist
+++ b/HotKeyToolKit/Info.plist
@@ -5,18 +5,20 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>HotKeyToolKit</string>
+	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string>HotKeyToolKit</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.shadowlab.HotKeyToolKit</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2.2.0</string>
+	<string>${CURRENT_PROJECT_VERSION}</string>
 </dict>
 </plist>
