Update SparkKit Copyright and version + set svn-eol

--- a/SparkKit/ShadowKit/Info.plist
+++ b/SparkKit/ShadowKit/Info.plist
@@ -10,11 +10,13 @@
 	<string>org.shadowlab.spark.ShadowKit</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleSignature</key>
 	<string>Shad</string>
 	<key>CFBundleVersion</key>
-	<string>3.0</string>
+	<string>650</string>
 </dict>
 </plist>
