--- a/SparkKit/Info.plist
+++ b/SparkKit/Info.plist
@@ -12,11 +12,13 @@
 	<string>org.shadowlab.SparkKit</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleSignature</key>
-	<string>????</string>
+	<string>SpKt</string>
 	<key>CFBundleVersion</key>
-	<string>3.0</string>
+	<string>650</string>
 </dict>
 </plist>
