--- a/SparkDaemon/Spark Daemon.plist
+++ b/SparkDaemon/Spark Daemon.plist
@@ -6,22 +6,20 @@
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleGetInfoString</key>
-	<string></string>
 	<key>CFBundleIconFile</key>
 	<string>Spark</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.shadowlab.SparkDaemon</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string></string>
 	<key>CFBundleSignature</key>
 	<string>SprS</string>
 	<key>CFBundleVersion</key>
-	<string>3.0</string>
+	<string>650</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.3</string>
 	<key>LSUIElement</key>
