Start to cleanup AppleScript

--- a/SparkPlugins/Apple Script/Info.plist
+++ b/SparkPlugins/Apple Script/Info.plist
@@ -6,22 +6,22 @@
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-    <key>CFBundleName</key>
-	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
 	<string>org.shadowlab.spark.applescript</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2.0</string>
+	<string>3.0</string>
 	<key>NSMainNibFile</key>
-	<string>AppleScriptView</string>
+	<string>AppleScriptPlugin</string>
 	<key>NSPrincipalClass</key>
 	<string>AppleScriptActionPlugin</string>
 	<key>SparkActionClass</key>
