--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -89,6 +89,8 @@
 	<string>Sprk</string>
 	<key>CFBundleVersion</key>
 	<string>${CURRENT_PROJECT_VERSION}</string>
+  <key>CFBundleShortVersionString</key>
+	<string>3.0</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.3</string>
 	<key>NSAppleScriptEnabled</key>
