--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -64,7 +64,7 @@
 				<string>BNDL</string>
 			</array>
 			<key>CFBundleTypeRole</key>
-			<string>None</string>
+			<string>Viewer</string>
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>org.shadowlab.spark.action</string>
@@ -85,12 +85,12 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>3.0</string>
 	<key>CFBundleSignature</key>
 	<string>Sprk</string>
 	<key>CFBundleVersion</key>
 	<string>${CURRENT_PROJECT_VERSION}</string>
-  <key>CFBundleShortVersionString</key>
-	<string>3.0</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.3</string>
 	<key>NSAppleScriptEnabled</key>
