--- a/SparkPlugins/Text/Info.plist
+++ b/SparkPlugins/Text/Info.plist
@@ -16,12 +16,12 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
 	<key>CFBundleSignature</key>
-	<string>????</string>
+	<string>Sprk</string>
 	<key>CFBundleVersion</key>
-	<string>100.0</string>
+	<string>${CURRENT_PROJECT_VERSION}</string>
+    <key>CFBundleShortVersionString</key>
+    <string>1.0</string>
 	<key>NSMainNibFile</key>
 	<string>TextPlugin</string>
 	<key>NSPrincipalClass</key>
