Start to implements Hot plugin status change

--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -78,7 +78,7 @@
 	<key>CFBundleIconFile</key>
 	<string>Spark</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.shadowlab.Spark</string>
+	<string>org.shadowlab.SparkEditor</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
