--- a/SparkDaemon/Info.plist
+++ b/SparkDaemon/Info.plist
@@ -24,6 +24,8 @@
 	<string>${CURRENT_PROJECT_VERSION}</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.3</string>
+  	<key>NSAppleScriptEnabled</key>
+	<string>NO</string>
 	<key>LSUIElement</key>
 	<string>1</string>
 </dict>
