--- a/SparkKit/ShadowKit/Info.plist
+++ b/SparkKit/ShadowKit/Info.plist
@@ -14,6 +14,8 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
+	<key>CFBundleShortVersionString</key>
+	<string>3.0</string>
 	<key>CFBundleSignature</key>
 	<string>Shad</string>
 	<key>CFBundleVersion</key>
