--- a/SparkDaemon/Info.plist
+++ b/SparkDaemon/Info.plist
@@ -25,7 +25,9 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>10.3</string>
   	<key>NSAppleScriptEnabled</key>
-	<string>NO</string>
+	<string>YES</string>
+    <key>OSAScriptingDefinition</key>
+	<string>SparkDaemon.sdef</string>
 	<key>LSUIElement</key>
 	<string>1</string>
 </dict>
