--- a/SparkKit/Info.plist
+++ b/SparkKit/Info.plist
@@ -21,6 +21,6 @@
 	<key>CFBundleSignature</key>
 	<string>SpKt</string>
 	<key>CFBundleVersion</key>
-	<string>650</string>
+	<string>${CURRENT_PROJECT_VERSION}</string>
 </dict>
 </plist>
