--- a/SparkKit/ShadowKit/Info.plist
+++ b/SparkKit/ShadowKit/Info.plist
@@ -19,6 +19,6 @@
 	<key>CFBundleSignature</key>
 	<string>Shad</string>
 	<key>CFBundleVersion</key>
-	<string>650</string>
+	<string>${CURRENT_PROJECT_VERSION}</string>
 </dict>
 </plist>
