--- a/SparkPlugins/Application/Info.plist
+++ b/SparkPlugins/Application/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleVersion</key>
 	<string>${CURRENT_PROJECT_VERSION}</string>
     <key>CFBundleShortVersionString</key>
-    <string>3.0</string>
+    <string>3.0b2</string>
 	<key>NSMainNibFile</key>
 	<string>ApplicationPlugin</string>
 	<key>NSPrincipalClass</key>
