Replace old images by new multi resolutions images

--- a/SparkPlugins/iTunes/Info.plist
+++ b/SparkPlugins/iTunes/Info.plist
@@ -29,6 +29,6 @@
 	<key>SparkActionClass</key>
 	<string>ITunesAction</string>
 	<key>SparkPluginIcon</key>
-	<string>iTunesActionIcon</string>
+	<string>iTunesIcon</string>
 </dict>
 </plist>
