--- a/SparkPlugins/Application/Info.plist
+++ b/SparkPlugins/Application/Info.plist
@@ -29,6 +29,6 @@
 	<key>SparkActionClass</key>
 	<string>ApplicationAction</string>
 	<key>SparkPluginIcon</key>
-	<string>AppIcon</string>
+	<string>ApplicationIcon</string>
 </dict>
 </plist>
