--- a/SparkPlugins/AppleScript/Info.plist
+++ b/SparkPlugins/AppleScript/Info.plist
@@ -30,5 +30,7 @@
 	<string>AppleScriptAction</string>
 	<key>SparkPluginIcon</key>
 	<string>AppleScriptIcon</string>
+    <key>SparkHelpFile</key>
+    <string>AppleScriptHelp</string>
 </dict>
 </plist>
