--- a/SparkPlugins/Documents/Info.plist
+++ b/SparkPlugins/Documents/Info.plist
@@ -30,5 +30,7 @@
 	<string>DocumentAction</string>
 	<key>SparkPluginIcon</key>
 	<string>DocumentIcon</string>
+    <key>SparkHelpFile</key>
+    <string>DocumentHelp</string>
 </dict>
 </plist>
