--- a/SparkPlugins/System/Info.plist
+++ b/SparkPlugins/System/Info.plist
@@ -30,5 +30,7 @@
 	<string>SystemAction</string>
 	<key>SparkPluginIcon</key>
 	<string>SystemIcon</string>
+    <key>SparkHelpFile</key>
+    <string>SystemActionHelp</string>
 </dict>
 </plist>
