--- a/SparkPlugins/iTunes/Info.plist
+++ b/SparkPlugins/iTunes/Info.plist
@@ -30,5 +30,7 @@
 	<string>ITunesAction</string>
 	<key>SparkPluginIcon</key>
 	<string>iTunesIcon</string>
+    <key>SparkHelpFile</key>
+    <string>iTunesHelp</string>
 </dict>
 </plist>
