--- a/SparkPlugins/Text/Info.plist
+++ b/SparkPlugins/Text/Info.plist
@@ -30,5 +30,7 @@
 	<string>TextAction</string>
 	<key>SparkPluginIcon</key>
 	<string>TextIcon</string>
+    <key>SparkHelpFile</key>
+    <string>TextHelp</string>
 </dict>
 </plist>
