Implements First version of Backup/Restore Library. Update Editor to support setLibrary: in LibraryDocument. Correct sync bug in iTunes Plugins (visual no always sync). Bump version.

--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -35,6 +35,8 @@
 			<array>
 				<string>splx</string>
 			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>Splx</string>
 			<key>CFBundleTypeName</key>
 			<string>SparkLibraryArchive</string>
 			<key>CFBundleTypeOSTypes</key>
@@ -154,7 +156,7 @@
 			<key>UTTypeDescription</key>
 			<string>SparkLibraryArchive</string>
 			<key>UTTypeIconFile</key>
-			<string>Spax</string>
+			<string>Splx</string>
 			<key>UTTypeIdentifier</key>
 			<string>org.shadowlab.spark.library.archive</string>
 			<key>UTTypeTagSpecification</key>
