Implements iTunes Advanced Options. Update Plugin and Action interfaces.

--- a/SparkPlugins/Text/Info.plist
+++ b/SparkPlugins/Text/Info.plist
@@ -31,6 +31,6 @@
 	<key>SparkPluginIcon</key>
 	<string>TextIcon</string>
     <key>SparkHelpFile</key>
-    <string>TextHelp</string>
+    <string>TextActionHelp</string>
 </dict>
 </plist>
