--- a/SparkPlugins/Text/Info.plist
+++ b/SparkPlugins/Text/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleVersion</key>
 	<string>${CURRENT_PROJECT_VERSION}</string>
     <key>CFBundleShortVersionString</key>
-    <string>3.0b3</string>
+    <string>1.0a1</string>
 	<key>NSMainNibFile</key>
 	<string>TextPlugin</string>
 	<key>NSPrincipalClass</key>
