Implements most of the text plugin. Start to implements Updater

--- a/SparkPlugins/Text/Info.plist
+++ b/SparkPlugins/Text/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>TextAction</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.shadowlab.spark.Text</string>
+	<string>org.shadowlab.spark.action.keyboard</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
