--- a/SparkPlugins/AppleScript/Info.plist
+++ b/SparkPlugins/AppleScript/Info.plist
@@ -9,28 +9,28 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>org.shadowlab.spark.applescript</string>
+	<string>org.shadowlab.spark.action.applescript</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>3.0b4</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>${CURRENT_PROJECT_VERSION}</string>
-    <key>CFBundleShortVersionString</key>
-    <string>3.0b4</string>
 	<key>NSMainNibFile</key>
 	<string>AppleScriptPlugin</string>
 	<key>NSPrincipalClass</key>
 	<string>AppleScriptActionPlugin</string>
 	<key>SparkActionClass</key>
 	<string>AppleScriptAction</string>
+	<key>SparkHelpFile</key>
+	<string>AppleScriptHelp</string>
 	<key>SparkPluginIcon</key>
 	<string>AppleScriptIcon</string>
-    <key>SparkHelpFile</key>
-    <string>AppleScriptHelp</string>
 </dict>
 </plist>
