--- a/SparkPlugins/Application/Info.plist
+++ b/SparkPlugins/Application/Info.plist
@@ -6,31 +6,31 @@
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-  	<key>CFBundleName</key>
-	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>org.shadowlab.spark.application</string>
+	<string>org.shadowlab.spark.action.application</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>3.0b4</string>
 	<key>CFBundleSignature</key>
 	<string>Sprk</string>
 	<key>CFBundleVersion</key>
 	<string>${CURRENT_PROJECT_VERSION}</string>
-    <key>CFBundleShortVersionString</key>
-    <string>3.0b4</string>
 	<key>NSMainNibFile</key>
 	<string>ApplicationPlugin</string>
 	<key>NSPrincipalClass</key>
 	<string>ApplicationPlugin</string>
 	<key>SparkActionClass</key>
 	<string>ApplicationAction</string>
+	<key>SparkHelpFile</key>
+	<string>ApplicationHelp</string>
 	<key>SparkPluginIcon</key>
 	<string>ApplicationIcon</string>
-  <key>SparkHelpFile</key>
-  <string>ApplicationHelp</string>
 </dict>
 </plist>
