Change HKTK to support event latency as parameter (and no longer as a global) Start to change text action to support event latency setting.

--- a/SparkEditor/SUpdaterKit.plist
+++ b/SparkEditor/SUpdaterKit.plist
@@ -6,10 +6,8 @@
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleIconFile</key>
-	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>org.shadowlab.spark.supdatekit</string>
+	<string>org.shadowlab.spark.supdaterkit</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -17,12 +15,10 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.0b4</string>
+	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>SUpd</string>
 	<key>CFBundleVersion</key>
 	<string>${CURRENT_PROJECT_VERSION}</string>
-	<key>NSPrincipalClass</key>
-	<string></string>
 </dict>
 </plist>
