--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -112,7 +112,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.0b5</string>
+	<string>3.0rc1</string>
 	<key>CFBundleSignature</key>
 	<string>Sprk</string>
 	<key>CFBundleVersion</key>
