--- a/SparkPlugins/iTunes/Info.plist
+++ b/SparkPlugins/iTunes/Info.plist
@@ -22,6 +22,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>${CURRENT_PROJECT_VERSION}</string>
+  <key>OSAScriptingDefinition</key>
+  <string>iTunes.sdef</string>
 	<key>NSMainNibFile</key>
 	<string>iTunesPlugin</string>
 	<key>NSPrincipalClass</key>
