--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -112,13 +112,20 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.0b6</string>
+	<string>3.0b7</string>
 	<key>CFBundleSignature</key>
 	<string>Sprk</string>
 	<key>CFBundleVersion</key>
 	<string>${CURRENT_PROJECT_VERSION}</string>
+	<key>LSArchitecturePriority</key>
+	<array>
+		<string>i386</string>
+		<string>x86_64</string>
+		<string>ppc</string>
+		<string>ppc64</string>
+	</array>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.3</string>
+	<string>10.4</string>
 	<key>NSAppleScriptEnabled</key>
 	<string>YES</string>
 	<key>NSMainNibFile</key>
