--- a/Dependencies/xcconfigs/SUpdaterKit.xcconfig
+++ b/Dependencies/xcconfigs/SUpdaterKit.xcconfig
@@ -1,4 +1,4 @@
 
 GCC_PREFIX_HEADER = ../WBConfig/SharedPrefix.pch
 
-WB_OTHER_LDFLAGS = -framework SparkKit -framework SArchiveKit
+SU_FRAMEWORK_OTHER_LDFLAGS = -framework SparkKit
