One step to the futur: SDK 10.6 + 64 bits.

--- a/xcconfigs/Spark.xcconfig
+++ b/xcconfigs/Spark.xcconfig
@@ -4,3 +4,5 @@ GCC_PREFIX_HEADER = ../Dependencies/WBConfig/SharedPrefix.pch
 WONDERBOX = WONDERBOX_FRAMEWORK WONDERBOX_NAME=SparkKit
 
 CONFIGURATION_BUILD_DIR = $(SYMROOT)/Spark/$(CONFIGURATION)$(EFFECTIVE_PLATFORM_NAME)
+
+SYMROOT = ../build
