Commit before migrations

--- a/xcconfigs/Spark.xcconfig
+++ b/xcconfigs/Spark.xcconfig
@@ -6,3 +6,6 @@ WONDERBOX = WONDERBOX_FRAMEWORK WONDERBOX_NAME=SparkKit
 CONFIGURATION_BUILD_DIR = $(SYMROOT)/Spark/$(CONFIGURATION)$(EFFECTIVE_PLATFORM_NAME)
 
 SYMROOT = ../build
+
+//GCC_VERSION = com.apple.compilers.llvm.clang.1_0
+
