Start git migration.

--- a/xcconfigs/Spark.xcconfig
+++ b/xcconfigs/Spark.xcconfig
@@ -1,11 +1,21 @@
 
-GCC_PREFIX_HEADER = ../Dependencies/WBConfig/SharedPrefix.pch
+OBJROOT = ../Builds
+SYMROOT = ../Products
 
-WONDERBOX = WONDERBOX_FRAMEWORK WONDERBOX_NAME=SparkKit
+VERSIONING_SYSTEM = apple-generic
+VERSION_INFO_BUILDER = Jean-Daniel Dupas
 
-CONFIGURATION_BUILD_DIR = $(SYMROOT)/Spark/$(CONFIGURATION)$(EFFECTIVE_PLATFORM_NAME)
+// _CODE_SIGN_IDENTITY = BB-TV
 
-SYMROOT = ../build
+// Should be ARCHS_STANDARD_32_64_BIT, but it includes ppc
+// ARCHS = $(ARCHS_STANDARD_32_64_BIT)
+ARCHS = i386 x86_64
+VALID_ARCHS = i386 x86_64
 
-//GCC_VERSION = com.apple.compilers.llvm.clang.1_0
+WONDERBOX = WONDERBOX_FRAMEWORK
 
+GCC_PREFIX_HEADER = ../WBConfig/SharedPrefix.pch
+
+SHARED_PRECOMPS_DIR = $(OBJROOT)/SharedPrecompiledHeaders
+
+CONFIGURATION_BUILD_DIR = $(SYMROOT)/$(CONFIGURATION)$(EFFECTIVE_PLATFORM_NAME)
