--- a/xcconfigs/SparkDebug.xcconfig
+++ b/xcconfigs/SparkDebug.xcconfig
@@ -1,3 +1,4 @@
 
-#include "../Dependencies/WBConfig/xcconfigs/wonderbox/DebugLeopard32+64.xcconfig"
+#include "../WBConfig/xcconfigs/wonderbox/Leopard_Debug.xcconfig"
 #include "Spark.xcconfig"
+#include "debug.xcconfig"
