--- a/xcconfigs/SparkRelease.xcconfig
+++ b/xcconfigs/SparkRelease.xcconfig
@@ -1,3 +1,4 @@
 
-#include "../Dependencies/WBConfig/xcconfigs/wonderbox/ReleaseLeopard32+64.xcconfig"
+#include "../WBConfig/xcconfigs/wonderbox/Leopard_Release.xcconfig"
 #include "Spark.xcconfig"
+#include "release.xcconfig"
