Import archive kit

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "WonderBox"]
 	path = WonderBox
 	url = /Users/jddupas/Projects/Shared/WonderBox
+[submodule "SArchiveKit"]
+	path = SArchiveKit
+	url = /Users/jddupas/Projects/Shared/SArchiveKit
