--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "WBConfig"]
 	path = WBConfig
-	url = /Users/jddupas/Projects/Shared/WBConfig
+	url = ../../Free/WBConfig
 [submodule "WonderBox"]
 	path = WonderBox
-	url = /Users/jddupas/Projects/Shared/WonderBox
+	url = ../../Free/WonderBox
 [submodule "SArchiveKit"]
 	path = SArchiveKit
-	url = /Users/jddupas/Projects/Shared/SArchiveKit
+	url = ../../Free/SArchiveKit
