--- a/xcconfigs/debug.xcconfig
+++ b/xcconfigs/debug.xcconfig
@@ -2,12 +2,16 @@
 
 GCC_VERSION = com.apple.compilers.llvm.clang.nightly
 // Must be set to use Clang nightly plugin
-CLANG = /opt/llvm/bin/clang
+CLANG = /opt/llvm/nightly/bin/clang
+
+GCC_C_LANGUAGE_STANDARD = c1x
 
 CLANG_CPP_LANGUAGE_STANDARD = c++0x
 
 // -Wconversion does not have an useless semantic in clang
-// GCC_WARN_PROTOTYPE_CONVERSION=YES
+// GCC_WARN_CONVERSION=YES
+
+GCC_WARN_UNINITIALIZED_AUTOS = YES
 
 // -Wimplicit-atomic-properties: false positive
 // -Wno-idiomatic-parentheses: assignement used as condition with method starting by -init or with -nextObject.
