Work on Sparkle integration.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "SArchiveKit"]
 	path = SArchiveKit
 	url = ../../Free/SArchiveKit
+[submodule "Sparkle"]
+	path = Sparkle
+	url = ../ThirdParty/Sparkle
