Fix submodule paths
Try to add Sparkle submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "WBConfig"]
 	path = WBConfig
-	url = ../../Free/WBConfig
+	url = ../Free/WBConfig
 [submodule "WonderBox"]
 	path = WonderBox
-	url = ../../Free/WonderBox
+	url = ../Free/WonderBox
 [submodule "SArchiveKit"]
 	path = SArchiveKit
-	url = ../../Free/SArchiveKit
+	url = ../Free/SArchiveKit
 [submodule "Sparkle"]
 	path = Sparkle
 	url = ../ThirdParty/Sparkle
