--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,15 @@
-[submodule "WBConfig"]
-	path = WBConfig
-	url = ../Free/WBConfig
+[submodule "hadron"]
+	path = hadron
+	url = git@github.com:Jean-Daniel/hadron.git
 [submodule "WonderBox"]
 	path = WonderBox
-	url = ../Free/WonderBox
+	url = git@github.com:Jean-Daniel/WonderBox.git
+[submodule "Sparkle"]
+	path = Sparkle
+	url = git@github.com:Jean-Daniel/Sparkle.git
 [submodule "SArchiveKit"]
 	path = SArchiveKit
 	url = ../Free/SArchiveKit
-[submodule "Sparkle"]
-	path = Sparkle
-	url = ../ThirdParty/Sparkle
+[submodule "HotKeyToolKit"]
+	path = HotKeyToolKit
+	url = git@github.com:Jean-Daniel/HotKeyToolKit.git
