--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = git@github.com:Jean-Daniel/Sparkle.git
 [submodule "SArchiveKit"]
 	path = SArchiveKit
-	url = ../Free/SArchiveKit
+	url = git@github.com:Jean-Daniel/SArchiveKit
 [submodule "HotKeyToolKit"]
 	path = HotKeyToolKit
 	url = git@github.com:Jean-Daniel/HotKeyToolKit.git
