--- a/SparkKit/WonderBox/Info.plist
+++ b/SparkKit/WonderBox/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.shadowlab.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.xenonium.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
