--- a/SparkDaemon/Info.plist
+++ b/SparkDaemon/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>Spark</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.xenonium.spark.daemon</string>
+	<string>com.xenonium.Spark.daemon</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
