Restore SparkLibraryArchive support. We should be able to import old library archives.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 [submodule "HotKeyToolKit"]
 	path = HotKeyToolKit
 	url = git@github.com:Jean-Daniel/HotKeyToolKit.git
+[submodule "SArchiveKit"]
+	path = SArchiveKit
+	url = ../SArchiveKit
+	branch = master
