Using absolute path for submodule for consistency.

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,5 +12,5 @@
 	url = git@github.com:Jean-Daniel/HotKeyToolKit.git
 [submodule "SArchiveKit"]
 	path = SArchiveKit
-	url = ../SArchiveKit
+	url = git@github.com:Jean-Daniel/SArchiveKit
 	branch = master
