--- a/SparkEditor/Info.plist
+++ b/SparkEditor/Info.plist
@@ -102,7 +102,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.xenonium.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -110,29 +110,25 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.0b10</string>
+	<string>3.0b11</string>
 	<key>CFBundleSignature</key>
 	<string>Sprk</string>
-	<key>CFBundleURLTypes</key>
-	<array/>
 	<key>CFBundleVersion</key>
 	<string>${CURRENT_PROJECT_VERSION}</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.6</string>
+	<string>10.8</string>
 	<key>NSAppleScriptEnabled</key>
 	<string>YES</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>SparkEditor</string>
-	<key>NSServices</key>
-	<array/>
 	<key>OSAScriptingDefinition</key>
 	<string>SparkSuite.sdef</string>
 	<key>SUFeedURL</key>
-	<string>http://update.shadowlab.org/Spark/v3/release.rss</string>
+	<string>https://www.shadowlab.org/spark/v3/release.rss</string>
 	<key>SUPublicRSAKeyFile</key>
 	<string>Spark.cer</string>
 	<key>UTExportedTypeDeclarations</key>
