Xcode 9 + High Sierra

--- a/SparkPlugins/Accessibility/Info.plist
+++ b/SparkPlugins/Accessibility/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>AccessibilityAction</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.shadowlab.spark.action.accessibility</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
