Basic 10.14 compat issue.

--- a/Spark/Info.plist
+++ b/Spark/Info.plist
@@ -119,6 +119,8 @@
 	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.10</string>
+	<key>NSAppleEventsUsageDescription</key>
+	<string>send commands to other applications</string>
 	<key>NSAppleScriptEnabled</key>
 	<string>YES</string>
 	<key>NSMainNibFile</key>
@@ -212,7 +214,5 @@
 			</dict>
 		</dict>
 	</array>
-	<key>UTImportedTypeDeclarations</key>
-	<array/>
 </dict>
 </plist>
