--- a/xcconfigs/release.xcconfig
+++ b/xcconfigs/release.xcconfig
@@ -2,3 +2,6 @@
 #include "project.xcconfig"
 
 #include "../hadron/xcconfigs/config/release.xcconfig"
+
+CODE_SIGN_STYLE = Manual
+CODE_SIGN_IDENTITY = Developer ID Application
