--- a/Spark/SparkDaemon/Info.plist
+++ b/Spark/SparkDaemon/Info.plist
@@ -32,5 +32,7 @@
 	<string>NSApplication</string>
 	<key>OSAScriptingDefinition</key>
 	<string>SparkDaemon.sdef</string>
+	<key>NSAppleEventsUsageDescription</key>
+	<string>send commands to other applications</string>
 </dict>
 </plist>
