Cleanup Versioning + Fix App Creation issue.

--- a/Spark/Spark/Info.plist
+++ b/Spark/Spark/Info.plist
@@ -114,7 +114,7 @@
 	<key>CFBundleSignature</key>
 	<string>Sprk</string>
 	<key>CFBundleVersion</key>
-	<string>${CURRENT_PROJECT_VERSION}</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
