--- a/xcconfigs/project.xcconfig
+++ b/xcconfigs/project.xcconfig
@@ -1,6 +1,9 @@
 
 #include "../hadron/xcconfigs/os/sierra.xcconfig"
 
+MARKETING_VERSION = 3.2.1
+CURRENT_PROJECT_VERSION = 480
+
 DEVELOPMENT_TEAM = 3DT6DNJE39
 
 HA_WARNING_CPLUSPLUSFLAGS = $(inherited) -Wno-old-style-cast
